[EDGORDERS-22] Configuration based request routing (#23)
* [EDGORDERS-22] Configuration based request routing

Signed-off-by: Yauheni Kuzmianok <yauheni_kuzmianok@epam.com>

* [EDGORDERS-22] Configuration based request routing

Signed-off-by: Yauheni Kuzmianok <yauheni_kuzmianok@epam.com>

* [EDGORDERS-22] Configuration based request routing

Signed-off-by: Yauheni Kuzmianok <yauheni_kuzmianok@epam.com>

* [EDGORDERS-22] Configuration based request routing

Signed-off-by: Yauheni Kuzmianok <yauheni_kuzmianok@epam.com>

* [EDGORDERS-22] - Configuration based request routing

* [EDGORDERS-22] - Configuration based request routing

Co-authored-by: Andrei_Makaranka <Andrei_makaranka@epam.com>

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+    <generated_sources_dir>${project.build.directory}/generated-sources</generated_sources_dir>
+    <jsonschema2pojo_output_dir>${generated_sources_dir}/jsonschema2pojo</jsonschema2pojo_output_dir>
+
     <!-- the main class -->
     <exec.mainClass>org.folio.edge.orders.MainVerticle</exec.mainClass>
   </properties>
@@ -86,7 +89,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.7</version>
+      <version>3.9</version>
     </dependency>
 
     <!-- Only needed for AwsParamStore -->
@@ -114,32 +117,20 @@
       <version>3.1.0</version>
     </dependency>
 
-    <!-- logging see http://www.slf4j.org/legacy.html -->
-    <!-- we use SLF4J for our logging interface -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.18</version>
-    </dependency>
-
-    <!-- we use log4j as our logging implementation -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.13</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.13.3</version>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.13.3</version>
     </dependency>
-
-    <!-- include slf4j bridges to proxy all logging from library deps to
-      our logging impl -->
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-      <version>1.7.18</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.13.3</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -239,6 +230,28 @@
               </transformers>
               <artifactSet />
               <outputFile>${project.build.directory}/${project.artifactId}-fat.jar</outputFile>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.jsonschema2pojo</groupId>
+        <artifactId>jsonschema2pojo-maven-plugin</artifactId>
+        <version>1.0.2</version>
+        <configuration>
+          <includes>*.json</includes>
+          <outputDirectory>${jsonschema2pojo_output_dir}</outputDirectory>
+        </configuration>
+        <executions>
+          <execution>
+            <id>mappings-models</id>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+            <configuration>
+              <sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
+              <targetPackage>org.folio.rest.mappings.model</targetPackage>
             </configuration>
           </execution>
         </executions>
