EDGORDERS-40 Add routing definition to mod-ebsconet
Signed-off-by: Yauheni Kuzmianok <yauheni_kuzmianok@epam.com>

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -22,13 +22,13 @@
       "type": "EBSCONET",
       "method": "GET",
       "pathPattern": "/orders/order-lines/:id",
-      "proxyPath": "/ebsconet/order-lines/:id"
+      "proxyPath": "/ebsconet/orders/order-lines/:id"
     },
     {
       "type": "EBSCONET",
       "method": "PUT",
       "pathPattern": "/orders/order-lines/:id",
-      "proxyPath": "/ebsconet/order-lines/:id"
+      "proxyPath": "/ebsconet/orders/order-lines/:id"
     }
   ]
 }
