[EDGEORDERS-40] Add validation route for mod-ebsconet.

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -29,6 +29,12 @@
       "method": "PUT",
       "pathPattern": "/orders/order-lines/:id",
       "proxyPath": "/ebsconet/orders/order-lines/:id"
+    },
+    {
+      "type": "EBSCONET",
+      "method": "GET",
+      "pathPattern": "/orders/validate",
+      "proxyPath": "/ebsconet/validate"
     }
   ]
 }
