--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,9 @@
     <exec.mainClass>org.folio.edge.orders.MainVerticle</exec.mainClass>
     <sonar.exclusions>**/models/**.java</sonar.exclusions>
     <sonar.test.exclusions>**/*Test.java</sonar.test.exclusions>
-    <log4j.version>2.17.2</log4j.version>
+    <vertx.version>4.4.6</vertx.version>
+    <log4j.version>2.20.0</log4j.version>
+    <edge-common.version>4.5.2</edge-common.version>
     <argLine />
   </properties>
 
@@ -47,7 +49,7 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-stack-depchain</artifactId>
-        <version>4.3.8</version>
+        <version>${vertx.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -86,7 +88,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>edge-common</artifactId>
-      <version>4.4.1</version>
+      <version>${edge-common.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
@@ -98,7 +100,7 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-ssm</artifactId>
-      <version>1.12.426</version>
+      <version>1.12.562</version>
       <exclusions>
         <exclusion>
           <groupId>commons-logging</groupId>
@@ -112,7 +114,7 @@
     <dependency>
       <groupId>com.bettercloud</groupId>
       <artifactId>vault-java-driver</artifactId>
-      <version>3.1.0</version>
+      <version>5.1.0</version>
     </dependency>
 
     <dependency>
