[EDGORDERS-79] - pom updated

--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,35 @@
     <exec.mainClass>org.folio.edge.orders.MainVerticle</exec.mainClass>
     <sonar.exclusions>**/models/**.java</sonar.exclusions>
     <sonar.test.exclusions>**/*Test.java</sonar.test.exclusions>
+
+    <!--Dependency Management Properties-->
+    <log4j.version>2.20.0</log4j.version>
     <vertx.version>4.5.0</vertx.version>
-    <log4j.version>2.22.0</log4j.version>
+
+    <!--Dependency properties-->
     <edge-common.version>4.5.2</edge-common.version>
     <aws.sdk.ssm.version>1.12.623</aws.sdk.ssm.version>
     <vault.java.driver.version>5.1.0</vault.java.driver.version>
+    <jjwt.version>0.12.3</jjwt.version>
+    <commons-lang3.version>3.14.0</commons-lang3.version>
+
+    <!--Test dependencies-->
+    <juni.version>4.13.2</juni.version>
+    <awaitility.version>4.2.0</awaitility.version>
+    <equalsverifier.version>3.15.4</equalsverifier.version>
+    <mockito-core.version>5.8.0</mockito-core.version>
+    <rest-assured.version>5.4.0</rest-assured.version>
+
+    <!--Maven plugin properties-->
+    <maven-compiler-plugin.version>3.12.0</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
+    <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
+    <jsonschema2pojo-maven-plugin.version>1.2.1</jsonschema2pojo-maven-plugin.version>
+    <exec-maven-plugin.version>3.1.1</exec-maven-plugin.version>
+    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
+    <copy-rename-maven-plugin.version>1.0.1</copy-rename-maven-plugin.version>
+    <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
+
     <argLine />
   </properties>
 
@@ -77,7 +101,7 @@
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt</artifactId>
-      <version>0.12.3</version>
+      <version>${jjwt.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -95,7 +119,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.14.0</version>
+      <version>${commons-lang3.version}</version>
     </dependency>
 
     <!-- Only needed for AwsParamStore -->
@@ -136,19 +160,19 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <version>${juni.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.awaitility</groupId>
       <artifactId>awaitility</artifactId>
-      <version>4.2.0</version>
+      <version>${awaitility.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
       <artifactId>equalsverifier</artifactId>
-      <version>3.15.4</version>
+      <version>${equalsverifier.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -159,13 +183,13 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.8.0</version>
+      <version>${mockito-core.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
-      <version>5.4.0</version>
+      <version>${rest-assured.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -177,7 +201,7 @@
         Java 1.8 -->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.12.0</version>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <release>17</release>
         </configuration>
@@ -186,7 +210,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.3</version>
+        <version>${maven-surefire-plugin.version}</version>
       </plugin>
 
     <!-- You only need the part below if you want to build your application
@@ -195,7 +219,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>${maven-shade-plugin.version}</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -224,7 +248,7 @@
       <plugin>
         <groupId>org.jsonschema2pojo</groupId>
         <artifactId>jsonschema2pojo-maven-plugin</artifactId>
-        <version>1.2.1</version>
+        <version>${jsonschema2pojo-maven-plugin.version}</version>
         <configuration>
           <includes>*.json</includes>
           <outputDirectory>${jsonschema2pojo_output_dir}</outputDirectory>
@@ -247,7 +271,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.1</version>
+        <version>${exec-maven-plugin.version}</version>
         <executions>
           <execution>
             <!-- run the application using the fat jar -->
@@ -268,7 +292,7 @@
 
       <plugin>
         <artifactId>maven-resources-plugin</artifactId>
-        <version>3.3.1</version>
+        <version>${maven-resources-plugin.version}</version>
         <executions>
           <execution>
             <id>filter-descriptor-inputs</id>
@@ -293,7 +317,7 @@
       <plugin>
         <groupId>com.coderplus.maven.plugins</groupId>
         <artifactId>copy-rename-maven-plugin</artifactId>
-        <version>1.0.1</version>
+        <version>${copy-rename-maven-plugin.version}</version>
         <executions>
           <execution>
             <id>rename-descriptor-outputs</id>
@@ -320,7 +344,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>3.0.1</version>
+        <version>${maven-release-plugin.version}</version>
         <configuration>
           <preparationGoals>clean verify</preparationGoals>
           <tagNameFormat>v@{project.version}</tagNameFormat>
