--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <vault.java.driver.version>5.1.0</vault.java.driver.version>
     <jjwt.version>0.12.3</jjwt.version>
     <commons-lang3.version>3.14.0</commons-lang3.version>
+    <bc-fips.version>1.0.2.5</bc-fips.version>
 
     <!--Test dependencies-->
     <juni.version>4.13.2</juni.version>
@@ -155,6 +156,13 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
+    </dependency>
+
+    <!-- Library provides the basic cryptographic functionality complying with FIPS -->
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bc-fips</artifactId>
+      <version>${bc-fips.version}</version>
     </dependency>
 
     <!-- Test dependencies -->
