--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,11 @@
   </licenses>
 
   <properties>
+    <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+
     <!--Project properties-->
-    <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <generated_sources_dir>${project.build.directory}/generated-sources</generated_sources_dir>
     <jsonschema2pojo_output_dir>${generated_sources_dir}/jsonschema2pojo</jsonschema2pojo_output_dir>
@@ -41,32 +44,32 @@
     <sonar.test.exclusions>**/*Test.java</sonar.test.exclusions>
 
     <!--Dependency Management Properties-->
-    <log4j.version>2.24.1</log4j.version>
-    <vertx.version>4.5.10</vertx.version>
+    <log4j.version>2.24.3</log4j.version>
+    <vertx.version>4.5.13</vertx.version>
 
     <!--Folio dependencies properties-->
     <folio-module-descriptor-validator.version>1.0.0</folio-module-descriptor-validator.version>
+    <edge-common.version>4.9.0-SNAPSHOT</edge-common.version>
 
     <!--Dependency properties-->
-    <edge-common.version>4.7.2</edge-common.version>
-    <aws.sdk.ssm.version>1.12.774</aws.sdk.ssm.version>
+    <aws.sdk.ssm.version>2.30.31</aws.sdk.ssm.version>
     <vault.java.driver.version>5.1.0</vault.java.driver.version>
     <jjwt.version>0.12.6</jjwt.version>
     <commons-lang3.version>3.17.0</commons-lang3.version>
 
     <!--Test dependencies-->
     <junit.version>4.13.2</junit.version>
-    <awaitility.version>4.2.2</awaitility.version>
-    <equalsverifier.version>3.17.1</equalsverifier.version>
-    <mockito-core.version>5.14.2</mockito-core.version>
-    <rest-assured.version>5.5.0</rest-assured.version>
+    <awaitility.version>4.3.0</awaitility.version>
+    <equalsverifier.version>3.19.1</equalsverifier.version>
+    <mockito-core.version>5.15.2</mockito-core.version>
+    <rest-assured.version>5.5.1</rest-assured.version>
 
     <!--Maven plugin properties-->
-    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>3.5.1</maven-surefire-plugin.version>
+    <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
+    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
     <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
     <jsonschema2pojo-maven-plugin.version>1.2.1</jsonschema2pojo-maven-plugin.version>
-    <exec-maven-plugin.version>3.4.1</exec-maven-plugin.version>
+    <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <copy-rename-maven-plugin.version>1.0.1</copy-rename-maven-plugin.version>
     <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
@@ -128,8 +131,8 @@
 
     <!-- Only needed for AwsParamStore -->
     <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-ssm</artifactId>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>ssm</artifactId>
       <version>${aws.sdk.ssm.version}</version>
       <exclusions>
         <exclusion>
