--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -39,73 +39,55 @@
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/order-templates",
+      "pathPattern": "/orders/order-templates",
       "proxyPath": "/orders/order-templates?offset=:offset&limit=:limit&query=:query"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/funds",
-      "proxyPath": "/finance/funds"
+      "pathPattern": "/finance/funds",
+      "proxyPath": "/finance/funds?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/expense-classes",
-      "proxyPath": "/finance/expense-classes"
+      "pathPattern": "/finance/expense-classes",
+      "proxyPath": "/finance/expense-classes?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/expense-classes",
-      "proxyPath": "/finance/expense-classes"
+      "pathPattern": "/locations",
+      "proxyPath": "/locations?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/locations",
-      "proxyPath": "/locations"
+      "pathPattern": "/acquisitions-units/units",
+      "proxyPath": "/acquisitions-units/units?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/acquisitions-units",
-      "proxyPath": "/acquisitions-units/units"
+      "pathPattern": "/organizations/organizations",
+      "proxyPath": "/organizations/organizations?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/organizations",
-      "proxyPath": "/organizations/organizations"
+      "pathPattern": "/custom-fields",
+      "proxyPath": "/custom-fields?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/organizations",
-      "proxyPath": "/organizations/organizations"
+      "pathPattern": "/users",
+      "proxyPath": "/users?offset=0&limit=2147483647"
     },
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/custom-fields",
-      "proxyPath": "/custom-fields"
-    },
-    {
-      "type": "MOSAIC",
-      "method": "GET",
-      "pathPattern": "/mosaic/users",
-      "proxyPath": "/users"
-    },
-    {
-      "type": "MOSAIC",
-      "method": "GET",
-      "pathPattern": "/mosaic/billTo",
-      "proxyPath": "/configurations/entries?query=configName==tenant.addresses"
-    },
-    {
-      "type": "MOSAIC",
-      "method": "GET",
-      "pathPattern": "/mosaic/shipTo",
+      "pathPattern": "/addresses/billing-and-shipping",
       "proxyPath": "/configurations/entries?query=configName==tenant.addresses"
     }
   ]
