--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -39,53 +39,59 @@
     {
       "type": "MOSAIC",
       "method": "GET",
+      "pathPattern": "/mosaic/validate",
+      "proxyPath": "/mosaic/validate"
+    },
+    {
+      "type": "MOSAIC",
+      "method": "POST",
+      "pathPattern": "/mosaic/orders",
+      "proxyPath": "/mosaic/orders"
+    },
+    {
+      "type": "COMMON",
+      "method": "GET",
       "pathPattern": "/orders/order-templates",
       "proxyPath": "/orders/order-templates?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/finance/funds",
       "proxyPath": "/finance/funds?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/finance/expense-classes",
       "proxyPath": "/finance/expense-classes?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/locations",
       "proxyPath": "/locations?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/acquisitions-units/units",
       "proxyPath": "/acquisitions-units/units?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/organizations/organizations",
       "proxyPath": "/organizations/organizations?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/custom-fields",
       "proxyPath": "/custom-fields?offset=:offset&limit=:limit&query=:query"
     },
     {
-      "type": "MOSAIC",
-      "method": "GET",
-      "pathPattern": "/users",
-      "proxyPath": "/users?offset=:offset&limit=:limit&query=:query"
-    },
-    {
-      "type": "MOSAIC",
+      "type": "COMMON",
       "method": "GET",
       "pathPattern": "/addresses/billing-and-shipping",
       "proxyPath": "/configurations/entries?query=configName==tenant.addresses"
