[EDGORDERS-96-3]. Change validation method from GET to POST

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -38,7 +38,7 @@
     },
     {
       "type": "MOSAIC",
-      "method": "GET",
+      "method": "POST",
       "pathPattern": "/mosaic/validate",
       "proxyPath": "/mosaic/validate"
     },
