[EDGORDERS-96-4]. Revert MOSAIC endpoint changes

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -39,13 +39,13 @@
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/validate",
+      "pathPattern": "/mosaic/validate",
       "proxyPath": "/mosaic/validate"
     },
     {
       "type": "MOSAIC",
       "method": "POST",
-      "pathPattern": "/orders",
+      "pathPattern": "/mosaic/orders",
       "proxyPath": "/mosaic/orders"
     },
     {
