EDGORDERS-98. Add support for retrieving custom fields

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -57,6 +57,12 @@
     {
       "type": "COMMON",
       "method": "GET",
+      "pathPattern": "/orders/custom-fields",
+      "proxyPath": "/custom-fields?offset=:offset&limit=:limit&query=:query"
+    },
+    {
+      "type": "COMMON",
+      "method": "GET",
       "pathPattern": "/finance/funds",
       "proxyPath": "/finance/funds?offset=:offset&limit=:limit&query=:query"
     },
