[MODMO-14]. Cover mosaic integrations with Karate tests

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -81,6 +81,12 @@
     {
       "type": "COMMON",
       "method": "GET",
+      "pathPattern": "/acquisition-methods",
+      "proxyPath": "/orders/acquisition-methods?offset=:offset&limit=:limit&query=:query"
+    },
+    {
+      "type": "COMMON",
+      "method": "GET",
       "pathPattern": "/organizations",
       "proxyPath": "/organizations/organizations?offset=:offset&limit=:limit&query=:query"
     },
