--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -113,7 +113,8 @@
       "type": "COMMON",
       "method": "GET",
       "pathPattern": "/users",
-      "proxyPath": "/users?offset=:offset&limit=:limit&query=:query"
+      "proxyPath": "/users?offset=:offset&limit=:limit&query=:query",
+      "extraQuery": "type==staff"
     }
   ]
 }
