[MODMO-15]. Remove type==staff on GET /users

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -113,8 +113,7 @@
       "type": "COMMON",
       "method": "GET",
       "pathPattern": "/users",
-      "proxyPath": "/users?offset=:offset&limit=:limit&query=:query",
-      "extraQuery": "type==staff"
+      "proxyPath": "/users?offset=:offset&limit=:limit&query=:query"
     }
   ]
 }
