[MODMO-15]. Update schema

--- a/src/main/resources/schema/apiConfiguration.json
+++ b/src/main/resources/schema/apiConfiguration.json
@@ -30,7 +30,7 @@
             "type": "string"
           },
           "extraQuery": {
-            "description": "Extra query params to restrict all response from the path",
+            "description": "Extra query predicates to better restrict the proxy path response",
             "type": "string"
           }
         },
