[MODMO-15]. Update MosaicOrder schema & add more endpoints to edge-orders (#95)
* [MODMO-15]. Update MosaicOrder schema & add more endpoints to edge-orders

* [MODMO-15]. Add type==staff extra query to GET /users

* [MODMO-15]. Remove type==staff on GET /users

* [MODMO-15]. Update new routes with a suffix

* [MODMO-15]. Apply review recommendations

* [MODMO-15]. Update schema

* [MODMO-15]. Rename constructor param & member field

--- a/src/main/resources/schema/apiConfiguration.json
+++ b/src/main/resources/schema/apiConfiguration.json
@@ -28,6 +28,10 @@
           "proxyPath": {
             "description": "URI for proxy forwarding",
             "type": "string"
+          },
+          "extraQuery": {
+            "description": "Extra query predicates to better restrict the proxy path response",
+            "type": "string"
           }
         },
         "additionalProperties": false,
