--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -45,7 +45,7 @@
     {
       "type": "MOSAIC",
       "method": "POST",
-      "pathPattern": "/orders/orders",
+      "pathPattern": "/orders",
       "proxyPath": "/mosaic/orders"
     },
     {
