EDGORDERS-107. Unify mosaic orders mappings with ebsconet and gobi (#112)
* EDGORDERS-107. Unify mosaic orders mappings with ebsconet and gobi

* EDGORDERS-107. Unify mosaic orders mappings with ebsconet and gobi

* EDGORDERS-107. Unify mosaic orders mappings with ebsconet and gobi

(cherry picked from commit 660f80c120a9666ef9c5aa47dcc6336e2b2eb334)

--- a/src/main/resources/api_configuration.json
+++ b/src/main/resources/api_configuration.json
@@ -39,13 +39,13 @@
     {
       "type": "MOSAIC",
       "method": "GET",
-      "pathPattern": "/mosaic/validate",
+      "pathPattern": "/orders/validate",
       "proxyPath": "/mosaic/validate"
     },
     {
       "type": "MOSAIC",
       "method": "POST",
-      "pathPattern": "/mosaic/orders",
+      "pathPattern": "/orders",
       "proxyPath": "/mosaic/orders"
     },
     {
